--- a/lesson 17/index.html
+++ b/lesson 17/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loop and array</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .box {
+            width: 60%;
+            height: 60%;
+            border: 3px solid black;
+            border-radius: 15px;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="box" id="box">
 
+    </div>
     <script src="app.js"></script>
 </body>
 
