--- a/learn2/while and if/lesson 18/index.html
+++ b/learn2/while and if/lesson 18/index.html
@@ -9,12 +9,28 @@
     <style>
         body {
             background-color: rgb(44, 240, 70);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        div {
+            width: 80%;
+            height: 90vh;
+            border: 3px solid black;
+            border-radius: 14px;
+            padding: 20px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 1.3em;
         }
     </style>
 </head>
 
 <body>
+    <div id="docme">
 
+    </div>
     <script src="app/app.js"></script>
 </body>
 
