--- a/room learn/massage login/index.html
+++ b/room learn/massage login/index.html
@@ -7,8 +7,8 @@
     <title>login</title>
 </head>
 <body>
-    <div class="wrapper">
-        
+    <div class="wrapper" id="wrapper">
+
     </div>
     <script src="root/app.js"></script>
 </body>
