--- a/room learn/single file exercise/18 timer/index.html
+++ b/room learn/single file exercise/18 timer/index.html
@@ -1,21 +1,64 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="hourglass_full_white_48dp.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap" rel="stylesheet">
     <title>receive timer</title>
     <style>
+        .conutiner {
+            width: 100%;
+            height: 100%;
+            background: url('pexels-pixabay-48896.jpg');
+            background-size: cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
+        .box {
+            width: 40%;
+            height: 40%;
+            border-radius: 10px;
+            background-color: rgba(0, 110, 255, 0.57);
+            backdrop-filter: blur(3px);
+            box-shadow: 1px 1px 15px 1px black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Palette Mosaic', cursive;
+
+            pexels-pixabay-48896.jpg
+        }
+
+        .box div {
+            width: 30px;
+            height: 30px;
+            font-size: 1rem;
+            border-bottom: 3px solid black;
+            margin: 0 15px;
+            /* padding-bottom: 1px; */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
+
 <body>
     <div class="conutiner" id="conutiner">
         <div class="box" id="box">
-            <div id="Seconds" class="Seconds"></div>
-            <div id="minuts" class="minutes"></div>
-            <div id="hours" class="hours"></div>
+            <div id="Seconds" class="Seconds box-load">00</div>
+            <span>:</span>
+            <div id="minuts" class="minutes box-load">00</div>
+            <span>:</span>
+            <div id="hours" class="hours box-load">00</div>
         </div>
     </div>
 </body>
+
 </html>
