--- a/room learn/DOM project/01 lamp project/index.html
+++ b/room learn/DOM project/01 lamp project/index.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="root/main.css">
     <title>lamp</title>
 </head>
 <body>
     
+    <script src="root/app.js"></script>
 </body>
 </html>
