--- a/room learn/DOM project/01 lamp project/index.html
+++ b/room learn/DOM project/01 lamp project/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,8 +7,18 @@
     <link rel="stylesheet" href="root/main.css">
     <title>lamp</title>
 </head>
+
 <body>
-    
+    <div class="continer" id="continer">
+        <div class="box" id="box">
+            <img src="image/turn of.png" alt="">
+        </div>
+        <div class="bot" id="bot">
+            <button>turn on</button>
+            <button>turn off</button>
+        </div>
+    </div>
     <script src="root/app.js"></script>
 </body>
+
 </html>
