create onclick event on button

--- a/room learn/DOM project/01 lamp project/index.html
+++ b/room learn/DOM project/01 lamp project/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="continer" id="continer">
         <div class="box" id="box">
-            <img src="image/turn of.png" alt="">
+            <img id="image" src="image/turn of.png" alt="">
         </div>
         <div class="bot" id="bot">
-            <button>turn on</button>
-            <button>turn off</button>
+            <button onclick="cleckTurnOn()">turn on</button>
+            <button onclick="clickTurnOff()">turn off</button>
         </div>
     </div>
     <script src="root/app.js"></script>
