--- a/room learn/DOM project/01 lamp project/index.html
+++ b/room learn/DOM project/01 lamp project/index.html
@@ -14,8 +14,8 @@
             <img id="image" src="image/turn of.png" alt="">
         </div>
         <div class="bot" id="bot">
-            <button onclick="cleckTurnOn()">turn on</button>
-            <button onclick="clickTurnOff()">turn off</button>
+            <button onclick="clickTurnOn()" id="button">turn on</button>
+            <!-- <button onclick="clickTurnOff()">turn off</button> -->
         </div>
     </div>
     <script src="root/app.js"></script>
