Comment on the project

--- a/room learn/DOM project/02 login form/index.html
+++ b/room learn/DOM project/02 login form/index.html
@@ -12,8 +12,8 @@
     <div class="continer" id="continer">
         <div class="box" id="box">
             <form action="">
-                <input class="text-in input-1" type="text" value="ali" id="">
-                <input class="text-in input-2" type="password" value="8 character" id="">
+                <input class="text-in input-1" type="text" value="" id="">
+                <input class="text-in input-2" type="password" value="" id="">
                 <!-- <input class="btn-in input-3" type="button" onclick="receiveLogIn()" value="log in">
                 <input class="btn-in input-4" type="button" value="sign up"> -->
                 <button class="btn-in input-3" id="" onclick="receiveLogIn()">log in</button>
