creat madol tag

--- a/room learn/DOM project/03 form login/index.html
+++ b/room learn/DOM project/03 form login/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,8 +7,20 @@
     <link rel="stylesheet" href="style/main.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <form action="" class="form-log">
+            <input class="input-1" type="text" name="" id="">
+            <input class="input-2" type="password" name="" id="">
+            <button type="button">log in</button>
+        </form>
+    </div>
+    <div class="alert" id="alert">
+        
+    </div>
+
     <script src="root/app.js"></script>
 </body>
+
 </html>
