set onkeypress event

--- a/room learn/DOM project/03 form login/index.html
+++ b/room learn/DOM project/03 form login/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="wrapper">
         <form action="" class="form-log">
-            <input class="input-1" type="text" name="" id="">
-            <input class="input-2" type="password" name="" id="">
+            <input onkeypress="setAlertText()" class="input-1" type="text" name="" id="">
+            <input onkeypress="setAlertPass()" class="input-2" type="password" name="" id="">
             <button type="button">log in</button>
         </form>
     </div>
