--- a/room learn/DOM project/03 form login/index.html
+++ b/room learn/DOM project/03 form login/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <form action="" class="form-log">
-            <input onkeypress="setAlertText()" class="input-1" type="text" name="" id="">
+            <input onkeypress="setAlertText()" class="input-1" type="text" name="" id="inputName">
             <input onkeypress="setAlertPass()" class="input-2" type="password" name="" id="">
             <button type="button">log in</button>
         </form>
