update modal and button

--- a/room learn/DOM project/04 select country/index.html
+++ b/room learn/DOM project/04 select country/index.html
@@ -14,7 +14,7 @@
     <div class="d-flex justify-content-center align-items-center h-100 w-100">
 
         <!-- box form -->
-        
+
         <div class="container row justify-content-center align-items-center">
             <div class="col-2">
                 <select class="h-100 form-select" name="" id="">
@@ -26,15 +26,31 @@
             <form action="" class="col-5 m-0">
                 <input class="form-control" id="staticEmail2" type="text">
             </form>
-            <button class="col-3 btn btn-outline-dark" type="button" id="btn-select">set number</button>
+            <button class="col-3 btn btn-outline-dark" type="button" id="btn-select" data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop">set number</button>
         </div>
     </div>
 
     <!-- modal -->
 
     <div class="" id="">
-        <div class="modal-dialog modal-sm">
-            show item
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Is the number correct?</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Understood</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
