--- a/room learn/DOM project/04 select country/index.html
+++ b/room learn/DOM project/04 select country/index.html
@@ -17,7 +17,7 @@
 
         <div class="container row justify-content-center align-items-center">
             <div class="col-2">
-                <select class="h-100 form-select" name="" id="">
+                <select class="h-100 form-select" name="" id="code-country">
                     <option value="+98" class="">iran</option>
                     <option value="+1" class="">usa</option>
                     <option value="+84" class="">tailand</option>
