--- a/room learn/DOM project/04 select country/index.html
+++ b/room learn/DOM project/04 select country/index.html
@@ -42,7 +42,7 @@
                         <h5 class="modal-title" id="staticBackdropLabel">Is the number correct?</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body" id="show-item">
                         
                     </div>
                     <div class="modal-footer">
