add function and event onkeypress to input pass and text

--- a/room learn/DOM project/05 key press/index.html
+++ b/room learn/DOM project/05 key press/index.html
@@ -9,18 +9,19 @@
 </head>
 
 <body>
-    <div class="container d-flex align-items-center justify-content-center h-100 bg-info">
-        <div class="w-50 border border-5 border-secondary p-3 rounded-3 bg-secondary bg-opacity-50">
+    <div class="container d-flex align-items-center justify-content-center h-100">
+        <div class="w-50 border border-5 border-secondary p-3 rounded-3 bg-opacity-50">
             <form action="">
                 <div class="mb-3">
                     <label for="" class="form-label"></label>
-                    <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
-                    <small id="helpId" class="form-text text-dark text-muted">Help text</small>
+                    <input type="text" class="form-control" name="" id="textValue" aria-describedby="helpId"
+                        placeholder="">
+                    <p id="helpId" class="form-text"> </p>
                 </div>
                 <div class="mb-3">
                     <label for="" class="form-label"></label>
-                    <input type="password" class="form-control" name="" id="" placeholder="">
-                    <small id="helpId2" class="form-text text-dark text-muted">Help text</small>
+                    <input type="password" class="form-control" name="" id="passValue" placeholder="">
+                    <p id="helpId2" class="form-text"> </p>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Submit</button>
             </form>
