--- a/room learn/DOM project/04 select country/index.html
+++ b/room learn/DOM project/04 select country/index.html
@@ -8,6 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        #modal-alert{
+            position: absolute;
+            top: 30px;
+            left: 10%;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,6 +31,7 @@
                 </select>
             </div>
             <form action="" class="col-5 m-0">
+                <span id="modal-alert"></span>
                 <input class="form-control" id="staticEmail2" type="text">
             </form>
             <button class="col-3 btn btn-outline-dark" type="button" id="btn-select" data-bs-toggle="modal"
