--- a/room learn/DOM project/06 select box set/index.html
+++ b/room learn/DOM project/06 select box set/index.html
@@ -12,8 +12,31 @@
     <title>Document</title>
 </head>
 
-<body>
-
+<body class="bg-light">
+    <div class="container pt-5 bg-light h-100">
+        <div class="row bt-5 justify-content-center bg-secondary py-4 rounded-pill shadow">
+            <div class="col-4 p-3 border border-3 border-dark bg-info rounded-3 shadow mx-3">
+                <label for="" class="form-label"></label>
+                <select class="form-select" name="" id="">
+                    <option selected>Select one</option>
+                    <option value=""></option>
+                    <option value=""></option>
+                    <option value=""></option>
+                </select>
+            </div>
+            <div class="col-4 p-3 border border-3 border-dark bg-info rounded-3 shadow mx-3">
+                <div class="mb-3">
+                    <label for="" class="form-label"></label>
+                    <select class="form-select" name="" id="">
+                        <option selected>Select one</option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
