add id for select boxs

--- a/room learn/DOM project/06 select box set/index.html
+++ b/room learn/DOM project/06 select box set/index.html
@@ -17,7 +17,7 @@
         <div class="row bt-5 justify-content-center bg-secondary py-4 rounded-pill shadow">
             <div class="col-4 p-3 border border-3 border-dark bg-info rounded-3 shadow mx-3">
                 <label for="" class="form-label"></label>
-                <select class="form-select" name="" id="">
+                <select class="form-select" name="" id="box-country">
                     <option selected>Select one</option>
                     <option value=""></option>
                     <option value=""></option>
@@ -27,7 +27,7 @@
             <div class="col-4 p-3 border border-3 border-dark bg-info rounded-3 shadow mx-3">
                 <div class="mb-3">
                     <label for="" class="form-label"></label>
-                    <select class="form-select" name="" id="">
+                    <select class="form-select" name="" id="box-city">
                         <option selected>Select one</option>
                         <option value=""></option>
                         <option value=""></option>
