chenge attribut value in option tag

--- a/room learn/DOM project/06 select box set/index.html
+++ b/room learn/DOM project/06 select box set/index.html
@@ -18,7 +18,7 @@
             <div class="col-4 p-3 border border-3 border-dark bg-info rounded-3 shadow mx-3">
                 <label for="" class="form-label"></label>
                 <select class="form-select" name="" id="box-country">
-                    <option selected>Select cuontry</option>
+                    <option value="select country">Select cuontry</option>
                     <option value="iran">iran</option>
                     <option value="usa">usa</option>
                     <option value="russia">russia</option>
