--- a/room learn/DOM project/07_weather_app/index.html
+++ b/room learn/DOM project/07_weather_app/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-
+    <div class="bg-basic" id="bg-basic">
+        
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
