creat elemnt box weather

--- a/room learn/DOM project/07_weather_app/index.html
+++ b/room learn/DOM project/07_weather_app/index.html
@@ -15,8 +15,12 @@
 </head>
 
 <body>
-    <div class="bg-basic" id="bg-basic">
+    <div class="bg-basic d-flex justify-content-center align-items-center" id="bg-basic">
         
+        <!-- box weather -->
+        <div class="box-weather bg-info bg-opacity-25 h-25 rounded-3" id="">
+
+        </div>
     </div>
 
     <!-- JavaScript Bundle with Popper -->
