--- a/room learn/DOM project/07_weather_app/index.html
+++ b/room learn/DOM project/07_weather_app/index.html
@@ -16,10 +16,15 @@
 
 <body>
     <div class="bg-basic d-flex justify-content-center align-items-center" id="bg-basic">
-        
-        <!-- box weather -->
-        <div class="box-weather bg-info bg-opacity-25 h-25 rounded-3" id="">
 
+        <!-- box weather -->
+        <div class="box-weather bg-info bg-opacity-25 rounded-3 shadow" id="">
+            <form class="mb-3 p-2 mx-2 row justify-content-center">
+                <input type="text" class="form-floating col-8" name="" id="text-search" aria-describedby="helpId" placeholder="">
+                <button type="button" class="btn btn-outline-dark rounded-3 col-2 mx-2" id="btn-search">
+                    <i class="bi bi-search"></i>
+                </button>
+            </form>
         </div>
     </div>
 
