>>>> add city search function <<<<

--- a/room learn/DOM project/07_weather_app/index.html
+++ b/room learn/DOM project/07_weather_app/index.html
@@ -30,7 +30,7 @@
             </form>
 
             <!-- info weather -->
-            <div class="mx-3 d-none">
+            <div class="mx-3 d-none" id="box-weather">
                 <div class="">
                     <h3 class="display-5 my-3 mx-2" id="city">
                         tehran
